--- a/CS_Dev_Quiz/CS_Dev_Quiz.csproj
+++ b/CS_Dev_Quiz/CS_Dev_Quiz.csproj
@@ -49,7 +49,10 @@
     <Compile Include="Model\DocumentType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IDocumentReportGenerator.cs" />
     <Compile Include="Services\IDocumentSender.cs" />
+    <Compile Include="Services\Impl\SimplePrintFormGeneratorService.cs" />
+    <Compile Include="Services\Impl\SimpleReportGeneratorService.cs" />
     <Compile Include="Services\IPrintFormGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
