Q2 перечень типов документов, для которых IPrintFormGenerator может сгенерировать печатную форму, известен статически;

--- a/CS_Dev_Quiz/CS_Dev_Quiz.csproj
+++ b/CS_Dev_Quiz/CS_Dev_Quiz.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IDocumentReportGenerator.cs" />
     <Compile Include="Services\IDocumentSender.cs" />
+    <Compile Include="Services\Impl\Q2PrintFormGeneratorService.cs" />
     <Compile Include="Services\Impl\SimplePrintFormGeneratorService.cs" />
     <Compile Include="Services\Impl\SimpleReportGeneratorService.cs" />
     <Compile Include="Services\IPrintFormGenerator.cs" />
